@@ -32,6 +32,7 @@
  - [2433852] Add File Format Descriptions to XMLUI 1.5.x
  - [2462293] Enable Google Sitemaps for XMLUI
  - Fixed small bug in XMLUI's org.dspace.app.xmlui.cocoon.DSpaceMETSGenerator which caused Repository-wide METS file to fail to generate.
+ - [2477820] DSpace 1.5 XMLUI - Enable METS <amdSec> using crosswalks
 
 1.5.1 final
 ===========
